@@ -249,6 +249,13 @@ class RemoteRepository(object):
         self._lock_count = 0
         self._leave_lock = False
 
+    def __eq__(self, other):
+        return (self.__class__ == other.__class__ and
+                self._client == other._client)
+        
+    def __ne__(self, other):
+        return not self == other
+
     def _ensure_real(self):
         """Ensure that there is a _real_repository set.
 
