@@ -422,6 +422,109 @@ class TestRepository(TestCaseWithRepository):
         self.assertEqual(repo._serializer.format_num, format)
 
 
+class TestRepositoryEquality(TestCaseWithRepository):
+
+    def strictAssertEqual(self, a, b):
+        """Like assertEqual, but also checks the `!=` operator is consistent.
+
+        i.e. if `a == b` *and* `a != b`, this method will fail.
+
+        This can happen when a class defines an `__eq__` but doesn't define an
+        `__ne__`.
+        """
+        self.assertEqual(a, b)
+        self.failIf(
+            a != b,
+            "%r and %r are both equal and not equal!  Class probably defines "
+            "__eq__ without also defining __ne__." % (a, b))
+
+    def strictAssertNotEqual(self, a, b):
+        """Like assertNotEqual, but also checks the `==` operator is consistent.
+
+        i.e. if `a != b` *and* `a == b`, this method will fail.
+
+        This can happen when a class defines an `__eq__` but doesn't define an
+        `__ne__`.
+
+        :seealso: strictAssertEqual
+        """
+        self.assertNotEqual(a, b)
+        self.failIf(
+            a == b,
+            "%r and %r are both equal and not equal!  Class probably defines "
+            "__eq__ without also defining __ne__." % (a, b))
+
+    def test_same_repo_instance_is_equal(self):
+        """A repository object is always equal to itself."""
+        repo = self.make_repository('.')
+        self.strictAssertEqual(repo, repo)
+
+    def test_same_repo_location_is_equal(self):
+        """Different repository objects connected to the same location are
+        equal.
+        """
+        repo = self.make_repository('.')
+        reopened_repo = repo.bzrdir.open_repository()
+        self.failIf(
+            repo is reopened_repo,
+            "This test depends on reopened_repo being a different instance of "
+            "the same repo.")
+        self.strictAssertEqual(repo, reopened_repo)
+
+    def test_different_repos_not_equal(self):
+        """Repositories at different locations are not equal."""
+        repo_one = self.make_repository('one')
+        repo_two = self.make_repository('two')
+        self.strictAssertNotEqual(repo_one, repo_two)
+
+    def test_same_bzrdir_different_control_files_not_equal(self):
+        """Repositories in the same bzrdir, but with different control files,
+        are not equal.
+
+        This can happens e.g. when upgrading a repository.  This test mimics how
+        CopyConverter creates a second repository in one bzrdir.
+        """
+        repo = self.make_repository('repo')
+        try:
+            control_transport = repo.control_files._transport
+        except AttributeError:
+            # This test only applies to repository formats with control_files.
+            return
+        if control_transport.base == repo.bzrdir.transport.base:
+            # This test only applies to repository formats where the repo
+            # control_files are separate from other bzrdir files, i.e. metadir
+            # formats.
+            return
+        control_transport.copy_tree('.', '../repository.backup')
+        backup_transport = control_transport.clone('../repository.backup')
+        backup_repo = repo._format.open(repo.bzrdir, _found=True,
+                                        _override_transport=backup_transport)
+
+        self.strictAssertNotEqual(repo, backup_repo)
+
+    def test_different_format_not_equal(self):
+        """Different format repositories are comparable and not equal.
+
+        Comparing different format repository objects should give a negative
+        result, rather than trigger an exception (which could happen with a
+        naive __eq__ implementation, e.g. due to missing attributes).
+        """
+        repo = self.make_repository('repo')
+        other_repo = self.make_repository('other', format='default')
+        if repo._format == other_repo._format:
+            # We're testing the default format!  So we have to use a non-default
+            # format for other_repo.
+            get_transport(self.get_vfs_only_url()).delete_tree('other')
+            other_repo = self.make_repository('other', format='metaweave')
+        # Make sure the other_repo is not a RemoteRepository.
+        other_bzrdir = bzrdir.BzrDir.open(self.get_vfs_only_url('other'))
+        other_repo = other_bzrdir.open_repository()
+        # Compare both ways, to make sure the __eq__ on both repositories cope
+        # with comparing against a different class.
+        self.strictAssertNotEqual(repo, other_repo)
+        self.strictAssertNotEqual(other_repo, repo)
+
+
 class TestRepositoryLocking(TestCaseWithRepository):
 
     def test_leave_lock_in_place(self):
